style.css
/* General Formatting */

* {
    border: solid red 1px;
    font-family: 'Poppins', sans-serif;
    padding: 0;
    margin: 0;
    color: #49b4aa;
    box-sizing: border-box;
}

h1 {
    opacity: 90%;
}

section {
    min-height: 500px;
    background-color: #0d1d1e;
    border: solid black 1px;
}

.button {
    appearance: none;
    border: solid #b79b7e 2px;
    outline: none;
    background: none;

    display: inline-block;
    background-color: none;
    padding: 16px;
    border-radius: 8px;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 700;
}

a {
    text-decoration: none;
}

.hamburger {
    display: none;
}


@media only screen and (max-width: 1000px) {
    .hamburger {
        display: block;
        border: 0;
        background-color: transparent;
        color:rgb(228, 183, 34);
        font-size: 30px;
    } 

    .nav-menu {
        display: none;
    }
}



/* Hero Section Formatting */

.hero {
    background-color: #0d1d1e;
    color: #fffefe;
    font-weight: 300;
    font-size: 30px;
}

nav {
    display: flex;
    justify-content: space-between;
}

ul {
    display: flex;
    list-style-type: none;
    justify-content: space-around;
    padding: 0;
    margin: 0;
}

li {
    text-decoration: none;
    padding: 0;
    margin: 0;
}

.header-links {
    background-color: none;
    padding: 8px;
    margin: 8px;
    border: none;
    color: #49b4aa;
}


.hero-text{
    margin-left: 40px;
    padding: 40px;
    margin: 40;
}

.hero-name {
    font-weight: 300;
    font-size: 100px;
    padding: 0;
    margin: 0;
}

.hero-subtitle {
    padding: 0;
    margin: 0;
    color: #b79b7e;
    font-weight: 700;
}

.bio-blurb {
    max-width: 500px;
    font-size:25px;
    padding-top: 20px;
}

.portfolio-selection {
    display: flex;
    align-items: center;
    height: 100px;
    padding: 0px;
    margin-top: 16px;
}

/* Project Section */

.project-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
}
.all-projects {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
}
.featured-project-content {
    display: flex;
    justify-content: space-around;
    align-content: center;
    padding: 20px;
    margin: 20px;
}

/* .project-group-container {

} */

.project-group-title {
    text-align: center;
    padding:20px;
}

.project-card {
    height: 100px;
    width: 100px;
    padding: 10px;
    margin: 10px;
    background-color: antiquewhite;
}

/* Experience Section */

.experience-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    align-items: center;
}

.experience-timeline {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    max-width: 700px;
}


/* About Me */

.about-section {
    align-content: center;
    justify-content: center;
    padding: 40px;
    margin: 0px;
}

.section-title {
    padding: 0;
    margin: 0;
    color: #b79b7e;
    font-weight: 700;
    font-size: 40px;
    justify-content:center;
    align-content:center;
    display: flex;
    opacity: 50%;
}

.about-content {
    display: flex;
    align-content: center;
    justify-content: center;
    align-items: center;
}

.profile-pic {
    height: 438px;
    width: 300px;
    max-width: 500px;
    max-height: 750px;
    border-radius: 2px;
    padding: 40px;
    margin: 0px;
}

.bio-section {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-content: center;
    margin: 16px;
    padding: 16px;
    max-width: 700px;
}

.bio-content {
    color: white;
    opacity: 90%;
    padding: 10px;
    margin: 10px;
}


/* Contact Me Section */


.contact-container {
    padding-top: 64px;
    padding-bottom: 64px;
}

form {
    display: block;
    margin: 0 auto;
    max-width:680px;
}

.form-grid {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(2, 1fr);  
    /* margin-bottom: 16px;   */
}



.form-element, .form-area {
    appearance: none;
    border: none;
    outline:none;
    background: none;

    display: block;
    width: 100%;
    background-color: #fff;
    border-radius: 8px;

    padding:20px;
    margin: 0 20px;
    font-size: 20px;
    color: #313131;

}

.form-area {
    grid-column: 1/ -1;
}

.right-align {
    text-align: right;
}




/* Footer Section */

footer {
    height: 200px;
    background-color: black;
}

